# Game_DB

./: CMakeLists.txt  README.md  README.txt  main.cpp  make.bat
controller/: interface.cpp  interface.h  userActions.cpp  userActions.h
lib/: sqlite3.lib
model/: database.cpp  database.h  info.cpp  info.h  userInput.cpp  userInput.h
